# langstons_anthill

./: .gitignore  BURN_AFTER_READING.md  CLAUDE.md  GUILD_CORRESPONDENCE.md  HALL_OF_VALOR.md  QUESTS.md  README.md  VISITORS.md  adorn.py  adorn_new_ant.py  build_farm.py  main.py  mkdocs.yml  starter_cards.py  view.py  watch.py  wishlist.json
.claude/: settings.local.json
.github/workflows/: wiki.yml
.jules/: naturalist.md  seneschal.md
anthill-core/: ARCHITECTURE.md  Cargo.toml
anthill-core/src/: bindings.rs  engine.rs  events.rs  lib.rs  rng.rs
anthill-core/src/types/: action.rs  entity.rs  graveyard.rs  mod.rs  resource.rs  state.rs  system.rs  tile.rs
anthill-core/tests/: compatibility.rs  determinism.rs
docs/: estate.md  index.md  journal.md
docs/cards/: index.md
docs/entities/: ants.md  index.md  visitors.md
docs/outside/: index.md
docs/resources/: index.md
docs/systems/: compost-heap.md  crafting-hollow.md  crystal-mine.md  dig-site.md  fungus-farm.md  index.md  ore-mine.md  queen-chamber.md  (+2 more)
engine/: __init__.py  actions.py  bus.py  core_wrapper.py  entities.py  journal.py  simulate.py  state.py  tick.py
logs/: archivist_prompt.txt  decisions.jsonl  journal.jsonl
plugins/: archivist.py  auto_ornamental.py  contributions.py  event_logger.py  exploration.py  loader.py  ornamentation.py  producer.py  queen.py  receiver.py  reflection.py  sanity.py  undertaker.py
prompts/: kimi_collab.md
state/: blessings.json  contributions.json  game.json
viewer/: index.html  package-lock.json  package.json  server.py  tsconfig.json  vite.config.ts
(+38 files in other folders)
