[package]
name = "anthill-core"
version = "0.1.0"
edition = "2021"
description = "The immutable core of Langston's Anthill - tick engine, state management, deterministic simulation"
license = "MIT"

[lib]
name = "anthill_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Reproducible randomness
rand = "0.8"
rand_chacha = "0.3"

# Clean error types
thiserror = "1.0"

# Python bindings (optional, for future PyO3 integration)
pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
